style improvements, check functionality, bug fix + text is now a fun pink to improve readability +user now has 3 checks for their guess before forcing submission +if user manually goes back to home, the game will now reset

--- a/guessing/static/guessing/site.css
+++ b/guessing/static/guessing/site.css
@@ -9,6 +9,14 @@ footer {
 	margin: 10px;
 }
 
+span {
+    color: pink
+}
+
+label {
+    color: pink
+}
+
 .content {
     padding: 5px;
 }
@@ -22,10 +30,11 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 5px;
 }
 
 .text-contain span {
-    padding: 5px;
+    padding: 4px;
     
 }
 
